--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <div class="wrapper">
     <header class="box header nav">
-      <a id="logga" href="index.html"><img class="logo" src="img/logo.png"></a>
+      <a id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
       <nav class="navbar">
         <ul>
           <li><a href="om-oss.html">Om oss</a></li>
@@ -49,7 +49,7 @@
           <li><a href="#">Blogg</a></li>
         </ul>
       </nav>
-      <img src="img/menu.png" onclick="myFunction()" id="menu">
+      <img src="img/menu.png" onclick="myFunction()" id="menu" alt="meny">
 
       <script>
         function myFunction() {
@@ -80,7 +80,7 @@
       </nav>
     </section>
 
-    <img class="showcase" src="img/cat.jpg">
+    <img class="showcase" src="img/cat.jpg" alt="Bild på katt">
     <main class="box main-area nested">
   
       <article class="katt">
