--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
   <div class="wrapper">
     <header class="box header nav">
-      <a id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
+      <a tabindex="0" id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
       <nav class="navbar">
         <ul>
-          <li><a href="om-oss.html">Om oss</a></li>
-          <li><a href="#">Våra katter</a></li>
-          <li><a href="#">Kontakt</a></li>
-          <li><a href="#">Blogg</a></li>
+          <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
+          <li><a tabindex="0" href="#">Våra katter</a></li>
+          <li><a tabindex="0" href="#">Kontakt</a></li>
+          <li><a tabindex="0" href="#">Blogg</a></li>
         </ul>
       </nav>
       <img src="img/menu.png" onclick="myFunction()" id="menu" alt="meny">
@@ -64,8 +64,8 @@
 
 
       <section class="medier">
-        <a href="#"><img class="ikoner" src="img/facebook.png"></a>
-        <a href="#"><img class="ikoner" src="img/instagram.png"></a>
+        <a href="#"><img tabindex="0" class="ikoner" src="img/facebook.png"></a>
+        <a href="#"><img tabindex="0" class="ikoner" src="img/instagram.png"></a>
       </section>
     </header>
 
@@ -86,18 +86,21 @@
       <article class="katt">
         <img class="width100" src="img/pelle.jpeg">
         <h3>Header</h3>
+        <button tabindex="0" class="btn">Läs mer</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
         <img class="width100" src="img/pelle.jpeg">
         <h3>Header</h3>
+        <button tabindex="0" class="btn">Läs mer</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
         <img class="width100" src="img/pelle.jpeg">
         <h3>Header</h3>
+        <button tabindex="0" class="btn">Läs mer</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
     </main>
