--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       <nav class="navbar">
         <ul>
           <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
-          <li><a tabindex="0" href="#">Våra katter</a></li>
-          <li><a tabindex="0" href="#">Kontakt</a></li>
-          <li><a tabindex="0" href="#">Blogg</a></li>
+          <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
+          <li><a tabindex="0" href="kontakt.html">Kontakt</a></li>
+          <li><a tabindex="0" href="blogg.html">Blogg</a></li>
         </ul>
       </nav>
       <img src="img/menu.png" onclick="myFunction()" id="menu" alt="meny">
@@ -73,9 +73,11 @@
       <nav>
         <ul>
           <li><a class="mobile" href="om-oss.html">Om oss</a></li> <br>
-          <li><a class="mobile" href="#">Våra katter</a></li><br>
-          <li><a class="mobile" href="#">Kontakt</a></li><br>
-          <li><a class="mobile" href="#">Blogg</a></li><br>
+          <li><a class="mobile" href="vara-katter.html">Våra katter</a></li><br>
+          <li><a class="mobile" href="kontakt.html">Kontakt</a></li><br>
+          <li><a class="mobile" href="blogg.html">Blogg</a></li><br>
+          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src=img/instagram.png> Instagram</li></a> <br>
+          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/facebook.png"> Facebook</li></a>
         </ul>
       </nav>
     </section>
@@ -84,22 +86,22 @@
     <main class="box main-area nested">
   
       <article class="katt">
-        <img class="width100" src="img/pelle.jpeg">
-        <h3>Header</h3>
+        <img class="width100" src="img/article1.png">
+        <h3 class="mainarticle">Pelle trivs!</h3>
         <button tabindex="0" class="btn">Läs mer</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
-        <img class="width100" src="img/pelle.jpeg">
-        <h3>Header</h3>
+        <img class="width100" src="img/article2.jpg">
+        <h3 class="mainarticle">Gretas nya matte</h3>
         <button tabindex="0" class="btn">Läs mer</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
-        <img class="width100" src="img/pelle.jpeg">
-        <h3>Header</h3>
+        <img class="width100" src="img/article3.jpg">
+        <h3 class="mainarticle">Sotis på upptäcksfärd</h3>
         <button tabindex="0" class="btn">Läs mer</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
