--- a/kontakt.html
+++ b/kontakt.html
@@ -44,9 +44,9 @@
       <nav class="navbar">
         <ul>
           <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
-          <li><a tabindex="0" href="#">Våra katter</a></li>
-          <li><a tabindex="0" href="#">Kontakt</a></li>
-          <li><a tabindex="0" href="#">Blogg</a></li>
+          <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
+          <li><a tabindex="0" href="kontakt.html">Kontakt</a></li>
+          <li><a tabindex="0" href="blogg.html">Blogg</a></li>
         </ul>
       </nav>
       <img src="img/menu.png" onclick="myFunction()" id="menu" alt="meny">
@@ -73,9 +73,9 @@
       <nav>
         <ul>
           <li><a class="mobile" href="om-oss.html">Om oss</a></li> <br>
-          <li><a class="mobile" href="#">Våra katter</a></li><br>
-          <li><a class="mobile" href="#">Kontakt</a></li><br>
-          <li><a class="mobile" href="#">Blogg</a></li><br>
+          <li><a class="mobile" href="vara-katter.html">Våra katter</a></li><br>
+          <li><a class="mobile" href="kontakt.html">Kontakt</a></li><br>
+          <li><a class="mobile" href="blogg.html">Blogg</a></li><br>
         </ul>
       </nav>
     </section>
