--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="sv">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Bettans katthem</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -76,7 +76,7 @@
           <li><a class="mobile" href="vara-katter.html">Våra katter</a></li><br>
           <li><a class="mobile" href="kontakt.html">Kontakt</a></li><br>
           <li><a class="mobile" href="blogg.html">Blogg</a></li><br>
-          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src=img/instagram.png> Instagram</li></a> <br>
+          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/instagram.png"> Instagram</li></a> <br>
           <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/facebook.png"> Facebook</li></a>
         </ul>
       </nav>
@@ -86,21 +86,21 @@
     <main class="box main-area nested">
   
       <article class="katt">
-        <img class="width100" src="img/article1.png">
+        <img class="width100" src="img/article1.png" alt="bild av katt">
         <h3 class="mainarticle">Pelle trivs!</h3>
         <button tabindex="0" class="btn">Läs mer</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
-        <img class="width100" src="img/article2.jpg">
+        <img class="width100" src="img/article2.jpg" alt="bild av katt">
         <h3 class="mainarticle">Gretas nya matte</h3>
         <button tabindex="0" class="btn">Läs mer</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
-        <img class="width100" src="img/article3.jpg">
+        <img class="width100" src="img/article3.jpg" alt="bild av katt">
         <h3 class="mainarticle">Sotis på upptäcksfärd</h3>
         <button tabindex="0" class="btn">Läs mer</button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
