--- a/index.html
+++ b/index.html
@@ -88,21 +88,21 @@
       <article class="katt">
         <img class="width100" src="img/article1.png" alt="bild av katt">
         <h3 class="mainarticle">Pelle trivs!</h3>
-        <button tabindex="0" class="btn">Läs mer</button>
+        <a href="blogg.html#2"><button tabindex="0" class="btn">Läs mer</button></a>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
         <img class="width100" src="img/article2.jpg" alt="bild av katt">
         <h3 class="mainarticle">Gretas nya matte</h3>
-        <button tabindex="0" class="btn">Läs mer</button>
+        <a href="blogg.html#2"><button tabindex="0" class="btn">Läs mer</button></a>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
         <img class="width100" src="img/article3.jpg" alt="bild av katt">
         <h3 class="mainarticle">Sotis på upptäcksfärd</h3>
-        <button tabindex="0" class="btn">Läs mer</button>
+        <a href="blogg.html#3"><button tabindex="0" class="btn">Läs mer</button></a>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
     </main>
