--- a/kontakt.html
+++ b/kontakt.html
@@ -45,7 +45,7 @@
         <ul>
           <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
           <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
-          <li><a tabindex="0" href="kontakt.html">Kontakt</a></li>
+          <li><a tabindex="0" href="kontakt.html" class="active">Kontakt</a></li>
           <li><a tabindex="0" href="blogg.html">Blogg</a></li>
         </ul>
       </nav>
