--- a/om-oss.html
+++ b/om-oss.html
@@ -43,7 +43,7 @@
       <a tabindex="0" id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
       <nav class="navbar">
         <ul>
-          <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
+          <li><a tabindex="0" href="om-oss.html" class="active">Om oss</a></li>
           <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
           <li><a tabindex="0" href="kontakt.html">Kontakt</a></li>
           <li><a tabindex="0" href="blogg.html">Blogg</a></li>
