--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
       <img src="img/menu.png" onclick="myFunction()" id="menu" alt="meny">
 
       <section class="medier">
-        <a href="#"><img tabindex="0" class="ikoner" src="img/facebook.png"></a>
-        <a href="#"><img tabindex="0" class="ikoner" src="img/instagram.png"></a>
+        <a href="#"><img class="ikoner" src="img/facebook.png" alt="länk till facebook"></a>
+        <a href="#"><img class="ikoner" src="img/instagram.png" alt="länk till ikoner"></a>
       </section>
     </header>
 
     <section id="navmobile">
       <nav>
         <ul>
-          <li><a class="mobile" href="om-oss.html">Om oss</a></li> <br>
-          <li><a class="mobile" href="vara-katter.html">Våra katter</a></li><br>
-          <li><a class="mobile" href="kontakt.html">Kontakt</a></li><br>
-          <li><a class="mobile" href="blogg.html">Blogg</a></li><br>
-          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/instagram.png"> Instagram</li></a> <br>
-          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/facebook.png"> Facebook</li></a>
+          <li><a class="mobile" href="om-oss.html"><p>Om oss</p></a></li>
+          <li><a class="mobile" href="vara-katter.html"><p>Våra katter</p></a></li>
+          <li><a class="mobile" href="kontakt.html"><p>Kontakt</p></a></li>
+          <li><a class="mobile" href="blogg.html"><p>Blogg</p></a></li>
+          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/instagram.png" alt="länk till Instagram">Instagram</a></li>
+          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/facebook.png" alt="länk till Facebook">Facebook</a></li>
         </ul>
       </nav>
     </section>
@@ -76,21 +76,21 @@
       <article class="katt">
         <img class="width100" src="img/article1.png" alt="bild av katt">
         <h3 class="mainarticle">Pelle trivs!</h3>
-        <a href="blogg.html#2"><button tabindex="0" class="btn">Läs mer</button></a>
+        <button tabindex="0" class="btn"><a href="blogg.html#2">Läs mer</a></button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
         <img class="width100" src="img/article2.jpg" alt="bild av katt">
         <h3 class="mainarticle">Gretas nya matte</h3>
-        <a href="blogg.html#2"><button tabindex="0" class="btn">Läs mer</button></a>
+        <button tabindex="0" class="btn"><a href="blogg.html#2">Läs mer</a></button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
       <article class="katt">
         <img class="width100" src="img/article3.jpg" alt="bild av katt">
         <h3 class="mainarticle">Sotis på upptäcksfärd</h3>
-        <a href="blogg.html#3"><button tabindex="0" class="btn">Läs mer</button></a>
+        <button href="blogg.html#3" tabindex="0" class="btn"><a href="blogg.html#3">Läs mer</a></button>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
     </main>
