--- a/vara-katter.html
+++ b/vara-katter.html
@@ -44,7 +44,7 @@
       <nav class="navbar">
         <ul>
           <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
-          <li><a tabindex="0" href="vara-katter.html" class="active">Våra katter</a></li>
+          <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
           <li><a tabindex="0" href="kontakt.html">Kontakt</a></li>
           <li><a tabindex="0" href="blogg.html">Blogg</a></li>
         </ul>
@@ -52,20 +52,20 @@
       <img src="img/menu.png" onclick="myFunction()" id="menu" alt="meny">
 
       <section class="medier">
-        <a href="#"><img tabindex="0" class="ikoner" src="img/facebook.png"></a>
-        <a href="#"><img tabindex="0" class="ikoner" src="img/instagram.png"></a>
+        <a href="#"><img class="ikoner" src="img/facebook.png" alt="länk till facebook"></a>
+        <a href="#"><img class="ikoner" src="img/instagram.png" alt="länk till ikoner"></a>
       </section>
     </header>
 
     <section id="navmobile">
       <nav>
         <ul>
-          <li><a class="mobile" href="om-oss.html">Om oss</a></li> <br>
-          <li><a class="mobile" href="vara-katter.html">Våra katter</a></li><br>
-          <li><a class="mobile" href="kontakt.html">Kontakt</a></li><br>
-          <li><a class="mobile" href="blogg.html">Blogg</a></li><br>
-          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/instagram.png"> Instagram</li></a> <br>
-          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/facebook.png"> Facebook</li></a>
+          <li><a class="mobile" href="om-oss.html"><p>Om oss</p></a></li>
+          <li><a class="mobile" href="vara-katter.html"><p>Våra katter</p></a></li>
+          <li><a class="mobile" href="kontakt.html"><p>Kontakt</p></a></li>
+          <li><a class="mobile" href="blogg.html"><p>Blogg</p></a></li>
+          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/instagram.png" alt="länk till Instagram">Instagram</a></li>
+          <li><a class="mobilikoner" href="#"><img class="mobilikoner" src="img/facebook.png" alt="länk till Facebook">Facebook</a></li>
         </ul>
       </nav>
     </section>
