--- a/blogg.html
+++ b/blogg.html
@@ -46,7 +46,7 @@
           <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
           <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
           <li><a tabindex="0" href="kontakt.html">Kontakt</a></li>
-          <li><a tabindex="0" href="blogg.html">Blogg</a></li>
+          <li><a tabindex="0" href="blogg.html" class="active">Blogg</a></li>
         </ul>
       </nav>
       <img src="img/menu.png" onclick="myFunction()" id="menu" alt="meny">
