--- a/vara-katter.html
+++ b/vara-katter.html
@@ -44,7 +44,7 @@
       <nav class="navbar">
         <ul>
           <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
-          <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
+          <li><a tabindex="0" href="vara-katter.html" class="active">Våra katter</a></li>
           <li><a tabindex="0" href="kontakt.html">Kontakt</a></li>
           <li><a tabindex="0" href="blogg.html">Blogg</a></li>
         </ul>
