--- a/blogg.html
+++ b/blogg.html
@@ -31,13 +31,6 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-
   <div class="bloggwrapper">
     <header class="box header nav">
       <a tabindex="0" id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
@@ -72,21 +65,21 @@
 
     <main class="blogginl">
   
-      <article class="katt" id="1">
+      <article class="article" id="1">
         <h2 class="mainarticle" tabindex="0">Pelle trivs!</h3>
         <p class="date"> 2019-11-01 kl 22.43 av Margit Berg</p>
         <img class="bloggbild" src="img/article1.png" alt="bild av katt">
         <p class="bloggpost" tabindex="0">Pelle trivs så bra hos sin nya matte. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
 
-      <article class="katt" id="2">
+      <article class="article" id="2">
         <h2 class="mainarticle" tabindex="0">Gretas nya matte</h3>
         <p class="date"> 2019-09-01 kl 12.45 av Lena Asp</p>
         <img class="bloggbild" src="img/article2.jpg" alt="bild av katt">
         <p class="bloggpost" tabindex="0">Greta har fått en ny matte. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
 
-      <article class="katt" id="3">
+      <article class="article" id="3">
         <h2 class="mainarticle" tabindex="0">Sotis på upptäcksfärd</h3>
         <p class="date"> 2019-07-21 kl 17.20 av Martin Ek</p>
         <img class="bloggbild" src="img/article3.jpg" alt="bild av katt">
