--- a/index.html
+++ b/index.html
@@ -31,12 +31,6 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 
   <div class="wrapper">
     <header class="box header nav">
@@ -73,21 +67,21 @@
     <img class="showcase" src="img/cat.jpg" alt="Bild på katt">
     <main class="box main-area nested">
   
-      <article class="katt">
+      <article class="article">
         <img class="width100" src="img/article1.png" alt="bild av katt">
         <h3 class="mainarticle">Pelle trivs!</h3>
         <a tabindex="0" class="btn" href="blogg.html#1">Läs mer</a>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
-      <article class="katt">
+      <article class="article">
         <img class="width100" src="img/article2.jpg" alt="bild av katt">
         <h3 class="mainarticle">Gretas nya matte</h3>
         <a tabindex="0" class="btn" href="blogg.html#2">Läs mer</a>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
       </article>
       
-      <article class="katt">
+      <article class="article">
         <img class="width100" src="img/article3.jpg" alt="bild av katt">
         <h3 class="mainarticle">Sotis på upptäcksfärd</h3>
         <a tabindex="0" class="btn" href="blogg.html#3">Läs mer</a>
