--- a/kontakt.html
+++ b/kontakt.html
@@ -24,17 +24,16 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-  <!-- Add your site or application content here -->
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
- <div class="wrapper">
-    <header class="box header nav">
+ <div class="wrapper"> <!-- Hemsidan wrapper -->
+    <header class="box header nav"> <!--Header -->
       <a tabindex="0" id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
-      <nav class="navbar">
+      <nav class="navbar"> <!-- Navbar för navigering på stora skärmar med ikoner för sociala medier-->
         <ul>
           <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
           <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
@@ -50,7 +49,7 @@
       </section>
     </header>
 
-    <section id="navmobile">
+    <section id="navmobile"> <!-- Navbar för mobiler med dropdown menu -->
       <nav>
         <ul>
           <li><a class="mobile" href="om-oss.html"><p>Om oss</p></a></li>
@@ -63,11 +62,11 @@
       </nav>
     </section>
 
-    <main class="contact-main main-area nested">
+    <main class="contact-main main-area nested"> <!-- Grund för kontaktsida-->
       <section class="contact">
         <h1>Kontakta oss!</h1>
         <h3>Har du några frågor, funderingar eller kanske är intresserad av en katt? Kontakta oss så hör vi av oss!</h3>
-        <form id="kontaktformulär">
+        <form id="kontaktformulär"> <!-- Formulär för kontakt -->
 
             <label for="förnamn">Förnamn</label>
             <input type="text" id="förnamn">
@@ -85,7 +84,7 @@
         </form>
       <p> Du kan också nå oss på <a href="#">Facebook</a> eller <a href="#">Instagram</a></p>
       </section>
-      <img class="contact-img" src="img/kontakt.jpg" alt="en katt">
+      <img class="contact-img" src="img/kontakt.jpg" alt="en katt"> <!-- sidobild på en katt -->
     </main>
     
   </div><!--End of site wrapper -->
