--- a/om-oss.html
+++ b/om-oss.html
@@ -31,10 +31,10 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <div class="wrapper">
-    <header class="box header nav">
+  <div class="wrapper"> <!-- Hemsidan wrapper -->
+    <header class="box header nav"> <!--Header -->
       <a tabindex="0" id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
-      <nav class="navbar">
+      <nav class="navbar"> <!-- Navbar för navigering på stora skärmar med ikoner för sociala medier-->
         <ul>
           <li><a tabindex="0" href="om-oss.html" class="active">Om oss</a></li>
           <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
@@ -50,7 +50,7 @@
       </section>
     </header>
 
-    <section id="navmobile">
+    <section id="navmobile"> <!-- Navbar för mobiler med dropdown menu -->
       <nav>
         <ul>
           <li><a class="mobile" href="om-oss.html"><p>Om oss</p></a></li>
@@ -63,7 +63,7 @@
       </nav>
     </section>
 
-    <main class="main-area om-oss">
+    <main class="main-area om-oss"> <!--Grund för sidan om oss-->
   
       <article class="om-oss-main">
         <h3 class="mainarticle">Om oss</h3>
@@ -74,7 +74,7 @@
         
       </article>
       
-      <article>
+      <article> <!-- Bilder för utfyllnad på om oss-->
         <img class="om-oss-img" src="img/om-oss.jpg" alt="bild av katt">
         <img class="om-oss-img" src="img/om-oss1.jpg" alt="bild av katt">
       </article>
