--- a/vara-katter.html
+++ b/vara-katter.html
@@ -31,10 +31,10 @@
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <div class="wrapper">
-    <header class="box header nav">
+  <div class="wrapper"> <!-- Hemsidan wrapper -->
+    <header class="box header nav"> <!--Header -->
       <a tabindex="0" id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
-      <nav class="navbar">
+      <nav class="navbar"> <!-- Navbar för navigering på stora skärmar med ikoner för sociala medier-->
         <ul>
           <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
           <li><a tabindex="0" href="vara-katter.html" class="active">Våra katter</a></li>
@@ -50,7 +50,7 @@
       </section>
     </header>
 
-    <section id="navmobile">
+    <section id="navmobile"> <!-- Navbar för mobiler med dropdown menu -->
       <nav>
         <ul>
           <li><a class="mobile" href="om-oss.html"><p>Om oss</p></a></li>
@@ -63,14 +63,14 @@
       </nav>
     </section>
 
-    <main class="main-area nested vara-katter-main">
+    <main class="main-area nested vara-katter-main"> <!-- Grund för sidan våra katter-->
   
-      <article class="article vara-katter">
+      <article class="article vara-katter"> <!--Grund för artiklen på våra katter-->
         <img class="vara-katter-img" src="img/cat1.jpg" alt="bild av katt">
         <h3 class="mainarticle" tabindex="0">Egon</h3>
-        <p>Ålder: 2 år</p>
-        <p>Ras: Bondkatt</p>
-        <p>Egon hittades i Borås och letar nu efter ett nytt hem</p>
+        <p>Ålder: 2 år</p> <!-- Ålder på katten -->
+        <p>Ras: Bondkatt</p> <!--Ras på katten-->
+        <p>Egon hittades i Borås och letar nu efter ett nytt hem</p> <!--Kort beskrivning av katten-->
         
       </article>
       
