--- a/blogg.html
+++ b/blogg.html
@@ -23,18 +23,16 @@
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-
-  <!-- Add your site or application content here -->
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
 
-  <div class="bloggwrapper">
-    <header class="box header nav">
+  <div class="bloggwrapper"> <!-- Hemsidans wrapper -->
+    <header class="box header nav"> <!--Header -->
       <a tabindex="0" id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
-      <nav class="navbar">
+      <nav class="navbar"> <!-- Navbar för navigering på stora skärmar med ikoner för sociala medier-->
         <ul>
           <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
           <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
@@ -50,7 +48,7 @@
       </section>
     </header>
 
-    <section id="navmobile">
+    <section id="navmobile"> <!-- Navbar för mobiler med dropdown menu -->
       <nav>
         <ul>
           <li><a class="mobile" href="om-oss.html"><p>Om oss</p></a></li>
@@ -63,9 +61,9 @@
       </nav>
     </section>
 
-    <main class="blogginl">
+    <main class="blogginl"> <!-- Klass för grunden på blogginlägg-->
   
-      <article class="article" id="1">
+      <article class="article" id="1"> <!-- Blogginlägg-->
         <h2 class="mainarticle" tabindex="0">Pelle trivs!</h3>
         <p class="date"> 2019-11-01 kl 22.43 av Margit Berg</p>
         <img class="bloggbild" src="img/article1.png" alt="bild av katt">
