--- a/blogg.html
+++ b/blogg.html
@@ -61,10 +61,10 @@
       </nav>
     </section>
 
-    <main class="blogginl"> <!-- Klass för grunden på blogginlägg-->
+    <main class="blogginl"> <!-- Klass för grunden på blogginlägg -->
   
       <article class="article" id="1"> <!-- Blogginlägg-->
-        <h2 class="mainarticle" tabindex="0">Pelle trivs!</h3>
+        <h2 class="mainarticle" tabindex="0">Pelle trivs</h3>
         <p class="date"> 2019-11-01 kl 22.43 av Margit Berg</p>
         <img class="bloggbild" src="img/article1.png" alt="bild av katt">
         <p class="bloggpost" tabindex="0">Pelle trivs så bra hos sin nya matte. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolores, inventore sit iste debitis rerum eveniet optio quam quisquam incidunt ad corporis illum quos soluta vero atque est animi autem voluptatum?</p>
