--- a/blogg.html
+++ b/blogg.html
@@ -44,7 +44,7 @@
 
       <section class="medier">
         <a href="#"><img class="ikoner" src="img/facebook.png" alt="länk till facebook"></a>
-        <a href="#"><img class="ikoner" src="img/instagram.png" alt="länk till ikoner"></a>
+        <a href="#"><img class="ikoner" src="img/instagram.png" alt="länk till instagram"></a>
       </section>
     </header>
 
