--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
       <nav class="navbar"> <!-- Navbar för navigering på stora skärmar med ikoner för sociala medier-->
         <ul>
           <li><a tabindex="0" href="om-oss.html" aria-label="Länk till sidan om oss">Om oss</a></li>
-          <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
-          <li><a tabindex="0" href="kontakt.html">Kontakt</a></li>
-          <li><a tabindex="0" href="blogg.html">Blogg</a></li>
+          <li><a tabindex="0" href="vara-katter.html" aria-label="Länk till sidan våra katter">Våra katter</a></li>
+          <li><a tabindex="0" href="kontakt.html" aria-label="Länk till sidan kontakt">Kontakt</a></li>
+          <li><a tabindex="0" href="blogg.html" aria-label="Länk till sidan blogg">Blogg</a></li>
         </ul>
       </nav>
       <img src="img/menu.png" onclick="myFunction()" id="menu" alt="meny">
 
       <section class="medier">
         <a href="#"><img class="ikoner" src="img/facebook.png" alt="länk till facebook"></a>
-        <a href="#"><img class="ikoner" src="img/instagram.png" alt="länk till ikoner"></a>
+        <a href="#"><img class="ikoner" src="img/instagram.png" alt="länk till instagram"></a>
       </section>
     </header>
 
