--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       <a tabindex="0" id="logga" href="index.html"><img class="logo" src="img/logo.png" alt="logga"></a>
       <nav class="navbar"> <!-- Navbar för navigering på stora skärmar med ikoner för sociala medier-->
         <ul>
-          <li><a tabindex="0" href="om-oss.html" aria-label="Länk till sidan om oss">Om oss</a></li>
-          <li><a tabindex="0" href="vara-katter.html" aria-label="Länk till sidan våra katter">Våra katter</a></li>
-          <li><a tabindex="0" href="kontakt.html" aria-label="Länk till sidan kontakt">Kontakt</a></li>
-          <li><a tabindex="0" href="blogg.html" aria-label="Länk till sidan blogg">Blogg</a></li>
+          <li><a tabindex="0" href="om-oss.html">Om oss</a></li>
+          <li><a tabindex="0" href="vara-katter.html">Våra katter</a></li>
+          <li><a tabindex="0" href="kontakt.html">Kontakt</a></li>
+          <li><a tabindex="0" href="blogg.html">Blogg</a></li>
         </ul>
       </nav>
       <img src="img/menu.png" onclick="myFunction()" id="menu" alt="meny">
